kubernetes/components/httproute/internal/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  namespace: ${NAMESPACE:default}
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    external-dns.alpha.kubernetes.io/hostname: "${SUBDOMAIN}.dcunha.io"
    gatus.home-operations.com/endpoint: |-
      url: "https://${SUBDOMAIN}.dcunha.io"
      interval: 1m
      group: internal
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          port: ${ACCESS_PORT}
